[gd_scene load_steps=3 format=3 uid="uid://wex5lv2jsf3a"]

[ext_resource type="Script" uid="uid://yhvqyq5s7mvl" path="res://multiplayers/scripts/multiplayer_mele_attack_component.gd" id="1_sdftt"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_sdftt"]
properties/0/path = NodePath(".:scale:x")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="MultiplayerMeleAttackComponent" type="Area2D"]
script = ExtResource("1_sdftt")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_sdftt")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
